libs/toolkit-contract-macros-tests/tests/ui/fail/grpc_unsupported_param_type.stderr
warning: unexpected `cfg` condition value: `grpc-client`
  --> tests/ui/fail/grpc_unsupported_param_type.rs:14:1
   |
14 | / #[grpc_contract(
15 | |     package = "demo.v1",
16 | |     service = "DemoApi",
17 | |     stubs_module = "crate::stubs"
18 | | )]
   | |__^
   |
   = note: no expected values for `feature`
   = note: using a cfg inside a attribute macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `grpc_contract` crate for guidance on how handle this unexpected cfg
   = help: the attribute macro `grpc_contract` may come from an old version of the `toolkit_contract_macros` crate, try updating your dependency with `cargo update -p toolkit_contract_macros`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default
   = note: this warning originates in the attribute macro `grpc_contract` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `i128: GrpcRepr` is not satisfied
  --> tests/ui/fail/grpc_unsupported_param_type.rs:21:31
   |
21 |     async fn beam(&self, big: i128) -> Result<u32, std::io::Error>;
   |                               ^^^^ the trait `GrpcRepr` is not implemented for `i128`
   |
   = help: the following other types implement trait `GrpcRepr`:
             f32
             f64
             i32
             i64
             u32
             u64
note: required by a bound in `toolkit_contract::grpc_repr::assert_grpc_repr`
  --> $WORKSPACE/libs/toolkit-contract/src/grpc_repr.rs
   |
   | pub const fn assert_grpc_repr<T: GrpcRepr + ?Sized>() {}
   |                                  ^^^^^^^^ required by this bound in `assert_grpc_repr`
